--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <header id="inicio" class="relative h-screen min-h-[600px] flex items-center justify-center overflow-hidden bg-royal-900">
         <div class="absolute inset-0 z-0">
             <div class="absolute inset-0 bg-gradient-to-b from-royal-900/90 via-royal-900/50 to-royal-900 z-10"></div>
-            <img src="/assets/rente confort (1).png"
+            <img src="https://images.unsplash.com/photo-1519167758481-83f550bb49b3?auto=format&fit=crop&q=80&w=1600"
 class="w-full h-full object-cover animate-[pulse-slow_8s_infinite] scale-205 opacity-60"
                 alt="Boda de Lujo" />
         </div>
